# EmberCastAI

./: .dockerignore  .gitignore  Dockerfile  README.md  ais.py  api.py  build_docker_image.sh  cde_data.py  cliff.toml  cmr.py  create_dataset.py  dem.py  dem_utils.py  dem_utils_simple.py  extractPolygon.py  extract_bands.py  flake.nix  gamma.py  geo.py  get_and_crop_sar.py  get_and_crop_sar.spec  get_dem.py  get_fires_and_extremes.py  go.mod  model.py  modelPOC.py  png_squarify.py  preprocess.py  requirements.txt  s3.py  shell.nix  ship.py  test.py  tif.py  training.py  training.slurm  utils.py  veda_testing.py  verify_model.py  webScraper.go  (+2 more)
.github/workflows/: release.yaml
EmberCastAIGUI/: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  backup.toml  flake.nix  process.spec  result  shell.nix
EmberCastAIGUI/assets/model/: fire_prediction_random_forest.pkl  fire_predictor_model.pth  simple_cnn  simple_fire_cnn.pth
EmberCastAIGUI/assets/scripts/: model.py  process.py  tree.py  verify_model.py
EmberCastAIGUI/src/: build.rs  main.rs
checkpoints/: best_model.pth
dataset/coordinates/: 20240911_BachelorComplex_IR.wkt  20240914_BachelorComplex_IR.wkt  20240915_ BachelorCx_IR.wkt  20240916_ BachelorCx_IR.wkt  20240920_BachelorCx_IR.wkt  20240921_BachelorCx_IR.wkt  20240922_BachelorComplex_IR.wkt  20240923_ BachelorCx_IR.wkt  20240924_BachelorComplex_IR.wkt  20240925_BachelorComplex_IR.wkt  20240927_BachelorComplex_IR.wkt  20241001_BachelorComplex_IR.wkt  20241002_BachelorComplex_IR.wkt  20241003_BachelorComplex_IR.wkt  20241004_Bachelor_Cmplx_IR.wkt  20241006_Bachelor_Cmplx_IR.wkt  20241008_Bachelor_Cmplx_IR.wkt  20241011_BachelorCx_IR.wkt  20241012_BachelorCx_IR.wkt  20241013_BachelorCx_IR.wkt  20241014_BachelorCx_IR.wkt  20241015_BachelorCx_IR.wkt  heat_perimeter_polygons.wkt
docs/: index.html
extracted_kmz/: [Content_Types].xml  doc.kml
kmz_data/: 20240911_BachelorComplex_IR.kmz  20240914_BachelorComplex_IR.kmz  20240915_ BachelorCx_IR.kmz  20240916_ BachelorCx_IR.kmz  20240919_BachelorCx_IR.kmz  20240920_BachelorCx_IR.kmz  20240921_BachelorCx_IR.kmz  20240922_BachelorComplex_IR.kmz  20240923_ BachelorCx_IR.kmz  20240924_BachelorComplex_IR.kmz  20240925_BachelorComplex_IR.kmz  20240927_BachelorComplex_IR.kmz  20241001_BachelorComplex_IR.kmz  20241002_BachelorComplex_IR.kmz  20241003_BachelorComplex_IR.kmz  20241004_Bachelor_Cmplx_IR.kmz  20241006_Bachelor_Cmplx_IR.kmz  20241008_Bachelor_Cmplx_IR.kmz  20241011_BachelorCx_IR.kmz  20241012_BachelorCx_IR.kmz  20241013_BachelorCx_IR.kmz  20241014_BachelorCx_IR.kmz  20241015_BachelorCx_IR.kmz
(+212 files in other folders)
