[package]
name = "EmberCastAIGUI"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1", default-features = false }
chrono = { version = "0.4.42", features = [
  "clock",
  "wasmbind",
], default-features = false }
dioxus = { version = "0.7.1", features = ["web"] }
image = { version = "0.25.8", features = ["png"], default-features = false }
reqwest = { version = "0.12.23", features = ["json"], default-features = false }
serde_json = "1.0.145"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false
panic = "abort"

[profile.release.package.'*']
opt-level = 3
strip = true
debug = false
